added react icons,changed some icons and add some css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -490,6 +490,10 @@ button {
   font-size: 0.8rem;
   margin-bottom: 0.5rem;
 }
+/* extra style */
+.dashoutuser {
+  vertical-align: middle;
+}
 
 /* Mobile Styles */
 @media (max-width: 700px) {
