added css for developer profile browse

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -353,9 +353,14 @@ button {
 }
 
 /* Profiles Page */
+
+.profiles{
+  width:70%;
+}
+
 .profile {
   display: grid;
-  grid-template-columns: 2fr 4fr 2fr;
+  grid-template-columns: 1fr 2fr 1fr;
   align-items: center;
   grid-gap: 2rem;
   padding: 1rem;
